--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -14,11 +14,13 @@ DISABLE_LINTERS:
 # Not worried if Lychee finds dead links
 SPELL_LYCHEE_DISABLE_ERRORS: true
 
+PYTHON_FLAKE8_ARGUMENTS: --ignore=E203,E266,E501,W503,F403,F401
+
 # Some Python Lint tools will fail without requirements installed
 PRE_COMMANDS:
-  - command: pip install -r requirements.txt pytest
+  - command: pip install pytest && pip install -r requirements.txt
     venv: pylint
-  - command: pip install -r requirements.txt pytest
+  - command: pip install pytest && pip install -r requirements.txt
     venv: pyright
 
 EMAIL_REPORTER: false
