Fixes to satisfy PyRight locally and errors in GitHub Actions

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -10,6 +10,7 @@ DISABLE_LINTERS:
   - COPYPASTE_JSCPD
   - REPOSITORY_DEVSKIM
   - REPOSITORY_CHECKOV
+  # - PYTHON_PYRIGHT
 
 # Not worried if Lychee finds dead links
 SPELL_LYCHEE_DISABLE_ERRORS: true
