--- a/.github/workflows/python-pytest.yml
+++ b/.github/workflows/python-pytest.yml
@@ -26,17 +26,20 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest coverage
+          python -m pip install pytest coverage coverage-badge
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         run: |
           coverage run -m pytest
+          coverage html
+          coverage-badge -o coverage.svg
 
       # Upload Coverage artifacts
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         if: success() || failure()
         with:
-          name: Coverage Badge
+          name: Coverage Reports and Badge
           path: |
+            htmlcov
             coverage.svg
