--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,13 +3,14 @@
 
 version: 2
 updates:
+  # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       # Check for updates to GitHub Actions every week
       interval: "weekly"
-  - package-ecosystem: "docker"
+  # Maintain dependencies for Python files in requirements.txt
+  - package-ecosystem: "pip"
     directory: "/"
     schedule:
-      # Check for updates to GitHub Actions every week
       interval: "weekly"
